I added new cars

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cities</h1>
+    <h1>Cars</h1>
+    <ul>
+    <li>Mercedes</li>
+    <li>BMW</li>
+    <li>Toyota</li>
+    <li>Audi</li>
+    </ul>
 </body>
 </html>
